# Designpatterns

./: .gitignore  CMakeLists.txt  README.md
DT063G Tenta - Designmönster/Tentan/: Theory_Test_2021-03-18_sv.odt
Laboration_1/: CMakeLists.txt
Laboration_1/include/: Lab1.h  Management.h  Shouter.h  SoundProducer.h  Talker.h  Uppgift1.h  Whisperer.h
Laboration_1/src/: Lab1.cpp  Main.cpp  Management.cpp  Shouter.cpp  SoundProducer.cpp  Uppgift1.cpp  Whisperer.cpp
Laboration_2/: CMakeLists.txt
Laboration_2/include/: Bakery.h  BakingRecepy.h  BakingRecepyManager.h  Ingredient.hpp  Kladdkaka.h  Lab2.h  Management.h  NoBakingException.h  Pizza.h  Recipes.h  Scones.h  Sockerkaka.h
Laboration_2/src/: Bakery.cpp  BakingRecepy.cpp  BakingRecepyManager.cpp  Lab2.cpp  Main.cpp  Recipes.cpp
Laboration_3/: CMakeLists.txt
Laboration_3/include/: Car.h  Helper.h  Lab3.h  SpaceShuttle.h  Submarine.h  Vehicle.h
Laboration_3/src/: Car.cpp  Helper.cpp  Lab3.cpp  Main.cpp  SpaceShuttle.cpp  Submarine.cpp  Vehicle.cpp
Laboration_4/: CMakeLists.txt
Laboration_4/include/: Action.h  Game.h  GameFactory.h  Lab4.h  Obstacle.h  Player.h
Laboration_4/src/: Action.cpp  Game.cpp  GameFactory.cpp  Lab4.cpp  Obstacle.cpp  Player.cpp
Laboration_5/: CMakeLists.txt
Laboration_5/include/: Command.h  CommandManager.h  HanoiEngine.h  Helper.h  Lab5.h  MoveCommand.h  Replay.h  ResetCommand.h  ShowCommand.h
Laboration_5/src/: CommandManager.cpp  Helper.cpp  Lab5.cpp  Management.cpp  MoveCommand.cpp  Replay.cpp  ResetCommand.cpp  ShowCommand.cpp
Laboration_6/: CMakeLists.txt
Laboration_6/include/: ConcreteComponents.h  ConcreteDecorators.h  Helper.h  Lab6.h  MainComponent.h
Laboration_6/src/: ConcreteComponents.cpp  ConcreteDecorators.cpp  Helper.cpp  Helper.h  Lab6.cpp
Laboration_7/: CMakeLists.txt
Laboration_7/include/: Action.h  Game.h  GameFactory.h  Lab7.h  Obstacle.h  Player.h
Laboration_7/src/: Game.cpp  GameFactory.cpp  Helper.cpp  Helper.h  Lab7.cpp
_CodeBase/: README.md
_CodeBase/Bakery/: Ingredient.hpp
_CodeBase/Hanoi/include/: HanoiEngine.h
_CodeBase/Hanoi/src/: HanoiEngine.cpp
_CodeBase/PowerSource/include/: FuelCell.h  GasTurbine.h  PowerSource.h  PowerSourceAdapters.h  V8Classic.h
_CodeBase/PowerSource/src/: FuelCell.cpp  GasTurbine.cpp  PowerSourceAdapters.cpp  V8Classic.cpp
_Resources/: README.md
